--- a/PhotoSale/PhotoSale.csproj
+++ b/PhotoSale/PhotoSale.csproj
@@ -50,10 +50,19 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PhotoPriceChoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhotoPriceChoice.Designer.cs">
+      <DependentUpon>PhotoPriceChoice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhotoPriceChoice.resx">
+      <DependentUpon>PhotoPriceChoice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
